app/src/main/java/com/example/todoapp/domain/error/NotDataFoundError.kt
package com.example.todoapp.domain.error

import java.lang.Exception

/**
 * NotDataFoundError
 *
 * @author (c) 2021, UVI TECH SAPI De CV, KAVAK
 */
class NotDataFoundError: Exception("Task no data found")